--- a/remanga_fastapi/templates/signin.html
+++ b/remanga_fastapi/templates/signin.html
@@ -1,29 +1,28 @@
 {% extends "catalog.html" %}
-{% load static %}
   
 {% block title %}
   <title>Вход</title>
 {% endblock %}
 
 {% block css %}
-  <link rel="preload" href="{% static 'signin/cb4f8de50573f9d5.css' %}" as="style" />
-  <link rel="stylesheet" href="{% static 'signin/cb4f8de50573f9d5.css' %}" data-n-g="" />
-  <link rel="stylesheet" type="text/css" href="{% static 'signin/843ea9ec36d246ae.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'signin/920c959cc716ad46.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'signin/029ac71e4e31b456.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'signin/09e4f43c14f4840f.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'signin/9dd15375466b1de0.css' %}" />
+  <link rel="preload" href="{{ url_for('static', path='signin/cb4f8de50573f9d5.css') }}" as="style" /> 
+  <link rel="stylesheet" href="{{ url_for('static', path='signin/cb4f8de50573f9d5.css') }}" data-n-g="" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='signin/843ea9ec36d246ae.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='signin/920c959cc716ad46.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='signin/029ac71e4e31b456.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='signin/09e4f43c14f4840f.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='signin/9dd15375466b1de0.css') }}" />
 {% endblock %}
   
 {% block styles %}
   <style>
-    .form.jsx-2964599226bcbb16>button {
+    .jsx-2964599226bcbb16>button {
       margin: 8px 0 8px;
       padding: 12px;
     }
 
     .Button_fullWidth__Dgoqh {
-      width: 200px;
+      width: 209px;
     }
 
     .Button_contained-size-large__HCqRj {
@@ -90,13 +89,17 @@
       background: var(--primary);
     }
 
-    .form.jsx-b2be4f715220f048>div {
+    .jsx-b2be4f715220f048>div {
       padding: 8px 0 4px;
     }
 
     .after_form {
       margin-right: 15px;
     }   
+
+    .exceptions {
+      color: red;
+    }
   </style>
 {% endblock %}
 
@@ -117,8 +120,7 @@
         class="Typography_h5__8pAxj Typography_color-textSecondary__iFFB7 Typography_gutterBottom__Q_9Ve Typography_align-left___WQEo"
         style="font-size: 1.1rem;">
         Войти в аккаунт</h5>
-      <form method="post" class="jsx-b2be4f715220f048 form">
-        {%csrf_token %}
+      <div class="jsx-b2be4f715220f048">
         <div class="jsx-261496919888b024 root fullWidth Input_formControl__B11lU">
           <div class="Input_root___0KQ3 Input_outlined__GjuSL"><input aria-invalid="false" name="username"
               placeholder="*Логин/почта" rows="1" type="text" class="Input_input___YBKm" value="" autofocus=""
@@ -132,18 +134,20 @@
           <p class="Input_formHelperText__EwCsr"></p>
         </div>
     </div>
-
-    {{ form.non_field_errors }}
-
+    <p class="exceptions"></p>
     <button
       class="Button_button___CisL Button_button___CisL Button_contained__8_KFk Button_contained-primary__IViyX Button_contained-size-large__HCqRj Button_fullWidth__Dgoqh"
       tabindex="0" type="submit"><span class="Button_label__jamx3">Войти</span></button>
-    </form>
+  </div>
     <p
       class="Typography_body2__piveF Typography_color-primary__xoN6_ Typography_bold__SKyBL Typography_align-center__j_M0w">
-      <a href="{% url 'remanga:signup' %}" class="jsx-4c4906b68fb5f50a"
+      <a href="" class="jsx-4c4906b68fb5f50a"
         style="color: var(--primary-light);">Зарегистрироваться</a>
     </p>
   </div>
   </div>
+  <script src="{{ url_for('static', path='signin/signin_post.js') }}"></script> 
+  <script>
+    listen_signin_button('{{ csrf_token }}')
+  </script>
 {% endblock %}
