--- a/remanga_fastapi/templates/signup.html
+++ b/remanga_fastapi/templates/signup.html
@@ -1,8 +1,10 @@
-{% extends "signin.html" %} {% load static %} {% block body %}
+{% extends "signin.html" %} 
 
 {% block title %}
 <title>Регистрация</title>
 {% endblock %}
+
+{% block body %}
 
 <div
   class="Dialog_paper__JNmkA Dialog_paperWidth-xs__LpPEM Dialog_paper-scroll-paper__3WvVF rounded"
@@ -20,8 +22,7 @@
       style="font-size: 1.1rem">
       Зарегистрировать аккаунт
     </h5>
-    <form method="post" class="jsx-b2be4f715220f048 form">
-      {% csrf_token %}
+    <div class="jsx-b2be4f715220f048">
       <div class="jsx-261496919888b024 root fullWidth Input_formControl__B11lU">
         <div class="Input_root___0KQ3 Input_outlined__GjuSL">
           <input aria-invalid="false" name="username" placeholder="*Никнейм" rows="1" type="text"
@@ -49,17 +50,13 @@
             autocomplete="new-password" required="" id="id_password2" /></div>
         <p class="Input_formHelperText__EwCsr"></p>
       </div>
-      {% for field in form %}
-      {% for error in field.errors %}
-      <p style="color: red">{{ error }}
-        {% endfor %}
-        {% endfor %}
+        <p class="exceptions"></p>
         <br />
         <button
           class="Button_button___CisL Button_button___CisL Button_contained__8_KFk Button_contained-primary__IViyX Button_contained-size-large__HCqRj Button_fullWidth__Dgoqh after_form"
           tabindex="0" type="submit"><span class="Button_label__jamx3">Регистрация</span>
         </button>
-    </form>
+      </div>
 
     <p class="Typography_body2__piveF Typography_color-textSecondary__iFFB7 Typography_align-center__j_M0w after_form"
       style="margin-top: 10px">
@@ -67,8 +64,13 @@
     </p>
     <p
       class="Typography_body2__piveF Typography_color-primary__xoN6_ Typography_bold__SKyBL Typography_align-center__j_M0w after_form">
-      <a href="{% url 'remanga:signin' %}" class="jsx-4c4906b68fb5f50a" style="color: var(--primary-light)">Войти</a>
+      <a href="{{ url_for('remanga:signin') }}" class="jsx-4c4906b68fb5f50a" style="color: var(--primary-light)">Войти</a>
     </p>
   </div>
 </div>
+<script src="{{ url_for('static', path='signup/signup_post.js') }}"></script>
+<script src="{{ url_for('static', path='title/js/fetch_request.js') }}"></script>
+<script>
+  listen_signup_button('{{ csrf_token }}')
+</script>
 {% endblock %}
