--- a/remanga_fastapi/templates/catalog.html
+++ b/remanga_fastapi/templates/catalog.html
@@ -676,7 +676,7 @@
         <div class="hidden-xsDown Header_navContainer__3fCGy">
           {% if user %}
           <a class="Button_button__JOS9_ Header_headerLink__EvjUK hidden-mdDown" tabindex="0" role="button"
-            href="{{ url_for('remanga:profile', user_id=user.id) }}">Закладки
+            href="{{ url_for('remanga:bookmarks') }}">Закладки 
           </a>
           {% else %}
           <a class="Button_button__JOS9_ Header_headerLink__EvjUK hidden-mdDown" tabindex="0" role="button"
