--- a/remanga_fastapi/templates/profile.html
+++ b/remanga_fastapi/templates/profile.html
@@ -4999,7 +4999,7 @@
 </div>
 
 <script src="{{ url_for('static', path='profile/profile_avatar_post.js') }}"></script>
-<script src="{{ url_for('static', path='title/js/fetch_request.js') }}"></script>
+<script src="{{ url_for('static', path='title/js/fetch_requests/fetch_request.js') }}"></script>
 <script>
 </script>
 {% endblock %}
