--- a/remanga_fastapi/templates/signin.html
+++ b/remanga_fastapi/templates/signin.html
@@ -147,7 +147,7 @@
   </div>
   </div>
   <script src="{{ url_for('static', path='signin/js/signin_post.js') }}"></script> 
-  <script src="{{ url_for('static', path='title/js/fetch_request.js') }}"></script> 
+  <script src="{{ url_for('static', path='title/js/fetch_requests/fetch_request.js') }}"></script> 
   <script>
     listen_signin_button('{{ csrf_token }}')
   </script>
