--- a/remanga_fastapi/templates/title.html
+++ b/remanga_fastapi/templates/title.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block css %}
-<link rel="preload" href="{{ url_for('static', path='title/5689d52a5bc7437e.css') }}" as="style" /> 
-<link rel="stylesheet" href="{{ url_for('static', path='title/5689d52a5bc7437e.css') }}" data-n-p="" />
-<link rel="stylesheet" href="{{ url_for('static', path='title/f246e387903032ed.css') }}" data-n-p="" />
-<link rel="stylesheet" href="{{ url_for('static', path='title/8910bb6d49cf84aa.css') }}"/>
+<link rel="preload" href="{{ url_for('static', path='title/css/5689d52a5bc7437e.css') }}" as="style" /> 
+<link rel="stylesheet" href="{{ url_for('static', path='title/css/5689d52a5bc7437e.css') }}" data-n-p="" />
+<link rel="stylesheet" href="{{ url_for('static', path='title/css/f246e387903032ed.css') }}" data-n-p="" />
+<link rel="stylesheet" href="{{ url_for('static', path='title/css/8910bb6d49cf84aa.css') }}"/>
 {% endblock %}
 
 {% block styles %}
@@ -990,7 +990,7 @@
                     </div>
                     <div class="jsx-a1b2d119e625548b">
                       <div class="jsx-a1b2d119e625548b Comments_wrap__7NbKY"> 
-                        {% for comment in comments %} 
+                        {% for comment in title.comments|sort(attribute='created_at', reverse=true) %} 
                         <div class="jsx-3914328852 Comments_media__5h5tS">
                           <a href="">
                             {% if comment.author.avatar %}
@@ -1128,9 +1128,27 @@
 
 <script src="{{ url_for('static', path='title/js/comment_input_stylization.js') }}"></script> 
 <script src="{{ url_for('static', path='title/js/title_menu_switcher.js') }}"></script> 
-
+<script src="{{ url_for('static', path='title/js/fetch_requests/fetch_request.js') }}"></script>
+<script src="{{ url_for('static', path='title/js/fetch_requests/title_rating_post.js') }}"></script>
+<script src="{{ url_for('static', path='title/js/fetch_requests/comment_post.js') }}"></script>
+<script src="{{ url_for('static', path='title/js/websockets/websockets_bookmark.js') }}"></script>
 <script>
-  const title_menu_switcher = new Title_menu_switcher("{{ title_rating }}","{{ user }}");
+  const user_id = "{{ user }}" ? "{{ user.id }}" : "";
+  const bookmark_button = user_id ? document.querySelector(".Button_bookmark") : null;
+  const title_count_bookmarks = document.querySelector(".title_count_bookmarks");
+  const title_id = "{{ title.id }}";
+
+  const session_id = generate_session_id();
+  const ws = new WebSocket(`ws://localhost:8000/ws/${session_id}`);
+  let websoket_data = null;
+  let websockets_csrf_token = '';
+
+  handler_websocket_response();
+  listen_websocket_close();
+</script>
+<script>
+  const csrf_token = "{{ csrf_token }}"
+  const title_menu_switcher = new Title_menu_switcher("{{ title_rating }}", "{{ user }}");
 
   function add_chapters_menu(description_element) {
     description_element.parentNode.insertAdjacentHTML('beforeend', `  
@@ -1154,84 +1172,12 @@
       </div>
     `);
   }
-
-  function add_rating_menu() {
-    document.querySelector("body").insertAdjacentHTML('beforeend', `
-    <div data-mui-test="Modal" role="presentation" class="jsx-24297ecd4e1681b6 jsx-3374786578 modal Dialog_root__IWQvZ">
-      <div data-test="Backdrop" aria-hidden="true" class="jsx-abc0dc1e74fa3514 jsx-24297ecd4e1681b6 jsx-3374786578 "
-        style="background-color: rgba(0, 0, 0, 0.667);"></div>
-      <div tabindex="0" data-test="sentinelStart"></div>
-      <div class="Dialog_container___8sF_ Dialog_scroll-body__nSP8j" tabindex="-1" style="opacity: 1;">
-        <div
-          class="jsx-7f4bbfca36e2b46d Dialog_paper__JNmkA Dialog_paperWidth-sm__1kKlh Dialog_paper-scroll-body__eos89 paper rounded">
-          <div class="jsx-b4198a5461045988 root">
-            <form method="post" class="form_title_rating">
-            <button class="transparent jsx-b4198a5461045988 item" type="submit">
-                <span class="jsx-b4198a5461045988">10</span>
-                <span class="jsx-b4198a5461045988">Эпик вин</span>
-            </button>
-
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_9">
-              <span class="jsx-b4198a5461045988">9</span>
-              <span class="jsx-b4198a5461045988">Великолепно</span>
-            </button>
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_8">
-              <span class="jsx-b4198a5461045988">8</span> 
-              <span class="jsx-b4198a5461045988">Отлично</span>
-            </button>
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_7">
-              <span class="jsx-b4198a5461045988">7</span>
-              <span class="jsx-b4198a5461045988">Хорошо</span>
-            </button>
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_6">
-              <span class="jsx-b4198a5461045988">6</span>
-              <span class="jsx-b4198a5461045988">Нормально</span>
-            </button>
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_5">
-              <span class="jsx-b4198a5461045988">5</span>
-              <span class="jsx-b4198a5461045988">Более-менее</span>
-            </button>
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_4">
-              <span class="jsx-b4198a5461045988">4</span>
-              <span class="jsx-b4198a5461045988">Плохо</span>
-            </button>
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_3">
-              <span class="jsx-b4198a5461045988">3</span>
-              <span class="jsx-b4198a5461045988">Очень плохо</span>
-            </button>
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_2">
-              <span class="jsx-b4198a5461045988">2</span>
-              <span class="jsx-b4198a5461045988">Ужасно</span>
-            </button>
-            <button class="transparent jsx-b4198a5461045988 item" type="submit" name="form_name" value="rating_1">
-              <span class="jsx-b4198a5461045988">1</span>
-              <span class="jsx-b4198a5461045988">Хуже некуда</span>
-            </button>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div tabindex="0" data-test="sentinelEnd"></div>
-    </div>
-    `)
-  }
-
 </script>
 <script>
   new Comment_input_stylization();
 </script>
-<script src="{{ url_for('static', path='title/js/requests_post/bookmark_post.js') }}"></script>
 <script>
-  const user_id = "{{ user }}" ? "{{ user.id }}" : "";
-  const bookmark_button = user_id ? document.querySelector(".Button_bookmark") : null;
-  const title_count_bookmarks = document.querySelector(".title_count_bookmarks");
-  const title_id = "{{ title.id }}";
-
-  const session_id = generate_session_id();
-  const ws = new WebSocket(`ws://localhost:8000/ws/${session_id}`);
-  let websoket_data = null
-
-  handler_websocket_response();
-  listen_websocket_close();
+  // const comment_rating_post = new Comment_rating_post();
+  new Comment_post("comment_rating_post", "");
 </script>
 {% endblock %}
