--- a/remanga_fastapi/templates/signup.html
+++ b/remanga_fastapi/templates/signup.html
@@ -69,7 +69,7 @@
   </div>
 </div>
 <script src="{{ url_for('static', path='signup/signup_post.js') }}"></script>
-<script src="{{ url_for('static', path='title/js/fetch_request.js') }}"></script>
+<script src="{{ url_for('static', path='title/js/fetch_requests/fetch_request.js') }}"></script>
 <script>
   listen_signup_button('{{ csrf_token }}')
 </script>
